# vrcdownbeat-app

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp
Source/common/: AppAudioRouter.cpp  AppAudioRouter.h  AppCapture.cpp  AppCapture.h  AppPaths.h  ChannelFx.h  Crypto.cpp  Crypto.h  Mp3Encoder.cpp  Mp3Encoder.h  Protocol.cpp  Protocol.h  Settings.h  SongLoader.cpp  SongLoader.h  StreamOutput.cpp  StreamOutput.h  StreamingResampler.h  VbCableInstaller.cpp  VbCableInstaller.h  VoiceChat.cpp  VoiceChat.h
Source/host/: HostMixEngine.cpp  HostMixEngine.h  HostView.cpp  HostView.h  JamServer.cpp  JamServer.h  RelayLink.cpp  RelayLink.h  SongLibrary.cpp  SongLibrary.h
Source/musician/: DownloadStore.cpp  DownloadStore.h  HostConnection.cpp  HostConnection.h  InstrumentHost.cpp  InstrumentHost.h  MusicianView.cpp  MusicianView.h  PlayCaptureEngine.cpp  PlayCaptureEngine.h
Source/ui/: AudioStreamPanel.cpp  AudioStreamPanel.h  ChatPanel.h  ChildWindow.h  LambdaPage.h  Meters.h  RecordingsPanel.cpp  RecordingsPanel.h  RootComponent.cpp  RootComponent.h  Style.h
relay/: RelayServer.cpp  bandjam-relay.service
tools/: build.cmd  capture_window.ps1  check_crash.ps1  click_button.ps1  configure.cmd  crop.ps1  crop_square.ps1  dump_combos.ps1  dump_controls.ps1  dump_formats.ps1  dump_pills.ps1  dump_ui.ps1  element_at.ps1  env.cmd  find_text.ps1  invoke_pill.ps1  make_test_recording.ps1  meter_endpoint.ps1  minimize_window.ps1  mouse_click.ps1  mouse_drag.ps1  open_combo.ps1  paste_edit_after_label.ps1  probe_wasapi.ps1  read_listen.ps1  read_listen_any.ps1  read_routes.ps1  rect_of.ps1  release.cmd  screenshot_app.ps1  select_combo_item.ps1  select_row.ps1  send_chat.ps1  set_edit_after_label.ps1  set_slider.ps1  test_routing.ps1  toggle_check.ps1  win_rect.ps1
